apps/common/nextcloud/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgres
  namespace: nextcloud
  labels:
    app: nextcloud-postgres
spec:
  type: ClusterIP
  selector:
    app: nextcloud-postgres
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
