apps/common/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-internal
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
